/resend API completed for reseller